--- a/apps/frontend/src/components/Map/map.css
+++ b/apps/frontend/src/components/Map/map.css
@@ -2,5 +2,8 @@
   background-color: antiquewhite;
   border: 10px solid black;
   display: flex;
+  flex-direction: column;
   height: 100vh;
+  padding: 24px;
+  position: relative;
 }
