Create typography component

--- a/apps/frontend/src/styling/typography.scss
+++ b/apps/frontend/src/styling/typography.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 @mixin heading-1() {
   font-size: 60px;
   font-family: 'Nunito Sans';
@@ -31,7 +33,7 @@
 
 @mixin subtitle-1() {
   font-size: 28px;
-  font-family: Nunito Sans;
+  font-family: 'Nunito Sans';
   font-weight: 300;
   font-style: normal;
   line-height: 40px;
