--- a/apps/frontend/src/components/Typography/index.scss
+++ b/apps/frontend/src/components/Typography/index.scss
@@ -1,4 +1,4 @@
-@use 'src/styling/colors' as *;
+@use 'src/styling/_colors.module' as *;
 @use 'src/styling/typography' as *;
 
 .typography-color {
