--- a/apps/frontend/src/styling/shadows.scss
+++ b/apps/frontend/src/styling/shadows.scss
@@ -1,4 +1,4 @@
-@import url(colors.scss);
+@use './_colors.module' as *;
 
 @mixin code-block-shadow-outside() {
   box-shadow: 0px 4px 7px 5px $color-neutral-200;
