--- a/apps/frontend/src/components/MapSections/TaskSection/index.scss
+++ b/apps/frontend/src/components/MapSections/TaskSection/index.scss
@@ -1,7 +1,15 @@
+@use 'src/styling/_colors.module' as *;
+@use 'src/styling/spacing' as *;
+@use 'src/styling/typography' as *;
+
 .task-section {
-  border: 1px solid aquamarine;
+  @include body-1-regular;
+  background-color: $color-neutral-white;
+  border-radius: 4px;
+  border: 2px solid $color-neutral-700;
   display: flex;
   flex-direction: column;
-  height: 200px;
+  margin-bottom: $xxxl;
+  padding: $xl $xxxxl;
   white-space: break-spaces;
 }
