--- a/apps/frontend/src/components/CodeBlock/index.scss
+++ b/apps/frontend/src/components/CodeBlock/index.scss
@@ -4,20 +4,18 @@
 @use 'src/styling/typography' as *;
 
 .code-block {
+  @include body-1-regular;
   @include code-block-shadow-outside;
   align-items: center;
   border-radius: 2px;
   border: 2px solid $color-green-300;
   display: flex;
   flex-direction: row;
-  height: 44px;
+  min-height: 44px;
   justify-content: center;
-  min-width: 100px;
   padding: $sm $xl;
-
-  span {
-    @include body-1-regular;
-  }
+  min-width: 100px;
+  width: fit-content;
 
   &__default {
     background-color: $color-green-200;
