--- a/apps/frontend/src/components/MapSections/ScriptSection/index.scss
+++ b/apps/frontend/src/components/MapSections/ScriptSection/index.scss
@@ -3,14 +3,14 @@
 
 .row-wrapper {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2px;
   margin-top: 16px;
 }
 
 .script-block {
-  border: 1px solid gray;
-  height: 20px;
   min-width: 100px;
-  padding: 0px 4px;
   width: fit-content;
 }
 
@@ -20,7 +20,7 @@
   border: 8px solid $color-primary-300;
   border-bottom: 0px;
   flex: 2.5;
-  padding: $sm $xl;
+  padding: $xl $xxxxl;
 }
 
 .slots-wrapper {
