Add HTML modal styling

--- a/apps/frontend/src/components/Map/index.scss
+++ b/apps/frontend/src/components/Map/index.scss
@@ -1,7 +1,7 @@
 @use 'src/styling/_colors.module' as *;
 @use 'src/styling/spacing' as *;
 
-.map {
+.map-content {
   background-color: $color-background;
   display: flex;
   flex-direction: column;
@@ -9,4 +9,8 @@
   padding: $xxxl $xxxxl 0 $xxxxl;
   position: relative;
   overflow: hidden;
+}
+
+.map-wrapper {
+  position: relative;
 }
