Implement all levels from Funcamentals category

--- a/apps/frontend/src/components/MapSections/MenuSection/index.scss
+++ b/apps/frontend/src/components/MapSections/MenuSection/index.scss
@@ -7,6 +7,7 @@
   border: 4px solid $color-primary-300;
   display: flex;
   flex-direction: column;
+  flex: 1;
   height: 50%;
   justify-content: space-between;
   margin-bottom: $xxxl;
