Implement the view for picking levels

--- a/apps/frontend/src/components/ChatAI/index.scss
+++ b/apps/frontend/src/components/ChatAI/index.scss
@@ -41,7 +41,7 @@
     border-bottom: none;
     max-height: 60vh;
     overflow: scroll;
-    padding: 16px;
+    padding: $xl;
     padding-bottom: 0px;
     position: relative;
   }
