--- a/apps/frontend/src/styling/_colors.module.scss
+++ b/apps/frontend/src/styling/_colors.module.scss
@@ -58,6 +58,8 @@ $color-red-200: #f5b4b8;
 $color-red-100: #fce6e7;
 
 :export {
+  color-green-100: $color-green-100;
   color-neutral-900: $color-neutral-900;
+  color-primary-300: $color-primary-300;
   color-primary-400: $color-primary-400;
 }
