--- a/apps/frontend/src/components/LevelOption/index.scss
+++ b/apps/frontend/src/components/LevelOption/index.scss
@@ -13,7 +13,6 @@
   min-width: 374px;
 
   &__button {
-    align-self: flex-end;
     background-color: $color-green-500;
     border-radius: 12px 12px 4px 0px;
     margin-top: auto;
@@ -26,6 +25,10 @@
     padding: $xxs $xs;
     text-align: center;
     width: 100%;
+  }
+
+  &__link {
+    align-self: flex-end;
   }
 
   &__points {
