Add visual feedback

--- a/apps/frontend/src/styling/_colors.module.scss
+++ b/apps/frontend/src/styling/_colors.module.scss
@@ -59,6 +59,9 @@ $color-red-100: #fce6e7;
 
 :export {
   color-green-100: $color-green-100;
+  color-green-300: $color-green-300;
+  color-green-400: $color-green-400;
+  color-green-500: $color-green-500;
   color-neutral-900: $color-neutral-900;
   color-primary-300: $color-primary-300;
   color-primary-400: $color-primary-400;
