--- a/apps/frontend/src/components/MapSections/MenuSection/index.scss
+++ b/apps/frontend/src/components/MapSections/MenuSection/index.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  height: 50%;
+  height: fit-content;
   justify-content: space-between;
   margin-bottom: $xxxl;
   padding: $xl;
