--- a/apps/frontend/src/components/MapSections/TaskSection/index.scss
+++ b/apps/frontend/src/components/MapSections/TaskSection/index.scss
@@ -9,12 +9,13 @@
   border: 2px solid $color-neutral-700;
   display: flex;
   flex-direction: column;
+  height: fit-content;
   margin-bottom: $xxxl;
   padding: $xl $xxxxl 0 $xxxxl;
   white-space: break-spaces;
   width: 70%;
 
   &__button {
-    margin-top: auto;
+    margin-top: $xxxl;
   }
 }
