--- a/apps/frontend/src/components/MapSections/MenuSection/index.scss
+++ b/apps/frontend/src/components/MapSections/MenuSection/index.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  height: 50%;
+  height: fit-content;
   justify-content: space-between;
   margin-bottom: $xxxl;
   padding: $xl;
@@ -16,6 +16,7 @@
   &__actions {
     display: flex;
     gap: $xxs;
+    margin-top: $md;
   }
 
   &__level-info {
