--- a/apps/frontend/src/components/LevelOption/index.scss
+++ b/apps/frontend/src/components/LevelOption/index.scss
@@ -27,6 +27,10 @@
     width: 100%;
   }
 
+  &__icon {
+    margin-top: $xl;
+  }
+
   &__link {
     align-self: flex-end;
     margin-top: $xl;
@@ -36,5 +40,16 @@
     display: flex;
     margin-bottom: $xxs;
     margin-top: $xl;
+  }
+
+  &.-locked {
+    background-color: $color-red-100;
+    border-color: $color-red-200;
+    padding-bottom: 29px;
+    min-width: 340px;
+
+    .level-option__header {
+      background-color: $color-red-200;
+    }
   }
 }
