--- a/apps/frontend/src/styling/_colors.module.scss
+++ b/apps/frontend/src/styling/_colors.module.scss
@@ -67,4 +67,5 @@ $color-red-100: #fce6e7;
   color-orange-600: $color-orange-600;
   color-primary-300: $color-primary-300;
   color-primary-400: $color-primary-400;
+  color-primary-600: $color-primary-600;
 }
