Add tutorial modal

--- a/apps/frontend/src/styling/_colors.module.scss
+++ b/apps/frontend/src/styling/_colors.module.scss
@@ -62,6 +62,7 @@ $color-red-100: #fce6e7;
   color-green-300: $color-green-300;
   color-green-400: $color-green-400;
   color-green-500: $color-green-500;
+  color-green-600: $color-green-600;
   color-neutral-white: $color-neutral-white;
   color-neutral-900: $color-neutral-900;
   color-orange-600: $color-orange-600;
