--- a/apps/frontend/src/components/Modals/index.scss
+++ b/apps/frontend/src/components/Modals/index.scss
@@ -31,6 +31,8 @@ $mappedBackgroundColorsList: (
   top: 50%;
   transform: translate(-50%, -50%);
   width: 45%;
+  max-height: 90%;
+  overflow-y: scroll;
 
   &__header {
     display: flex;
