--- a/apps/frontend/src/containers/LevelsList/index.scss
+++ b/apps/frontend/src/containers/LevelsList/index.scss
@@ -22,4 +22,17 @@
     gap: $xl;
     justify-content: space-between;
   }
+
+  &__loading {
+    background-color: rgba(40, 43, 45, 0.6);
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
