--- a/apps/frontend/src/containers/LevelListSection/index.scss
+++ b/apps/frontend/src/containers/LevelListSection/index.scss
@@ -27,6 +27,7 @@
     &.-right {
       border-radius: 12px 0px 0px 12px;
       right: 0;
+      margin-left: auto;
 
       svg {
         margin-left: $xxs;
