--- a/apps/frontend/src/components/LevelOption/index.scss
+++ b/apps/frontend/src/components/LevelOption/index.scss
@@ -51,5 +51,13 @@
     .level-option__header {
       background-color: $color-red-200;
     }
+
+    @media (min-width: 1800px) {
+      min-width: 500px;
+    }
+  }
+
+  @media (min-width: 1800px) {
+    min-width: 500px;
   }
 }
